Higher-level interface
Ignore-this: 1af415f5f8746459eb2ab65b5bf31c84

darcs-hash:20110219155506-fd04d-907cc7563797f442f44a8d655adb6e364ce46004

--- a/samtools.cabal
+++ b/samtools.cabal
@@ -11,9 +11,9 @@ Build-type:          Simple
 Cabal-version:       >=1.2
 
 Library
-  Exposed-modules:     Bio.SamTools.LowLevel
+  Exposed-modules:     Bio.SamTools.LowLevel, Bio.SamTools.Bam
   Other-modules:       C2HS
-  Build-depends:       base, bytestring, haskell98
+  Build-depends:       base, bytestring, haskell98, vector >= 0.7
   Hs-Source-Dirs:      src
   Build-tools:         c2hs
   Include-dirs:        /usr/local/include/bam, include
@@ -26,6 +26,17 @@ Executable samtest1
   Hs-Source-Dirs:      src, test
   Main-Is:             SamTest1.hs
   Other-Modules:       Bio.SamTools.LowLevel
+  Build-tools:         c2hs
+  Include-dirs:        /usr/local/include/bam, include
+  C-sources:           cbits/samtools.c
+  Includes:            include/samtools.h
+  Extra-libraries:     bam, z
+
+Executable samtest2
+  Build-depends:       base, bytestring, haskell98
+  Hs-Source-Dirs:      src, test
+  Main-Is:             SamTest2.hs
+  Other-Modules:       Bio.SamTools.LowLevel, Bio.SamTools.Bam
   Build-tools:         c2hs
   Include-dirs:        /usr/local/include/bam, include
   C-sources:           cbits/samtools.c
