Changed to MIT license
Ignore-this: 6ce539cf380cd15d0b43e0cfb7e64fe0

darcs-hash:20110220151826-fd04d-aa6bbb93a2c7389d8460fb2c40170ef9c1d77689

--- a/samtools/samtools.cabal
+++ b/samtools/samtools.cabal
@@ -1,7 +1,7 @@
 Name:                samtools
 Version:             0.0.20110214
 Synopsis:            Binding to the C samtools library
-License:             BSD3
+License:             MIT
 License-file:        LICENSE
 Author:              Nicholas Ingolia
 Maintainer:          nick@ingolia.org
