--- a/samtools-enumerator/samtools-enumerator.cabal
+++ b/samtools-enumerator/samtools-enumerator.cabal
@@ -1,5 +1,5 @@
 Name:                samtools-enumerator
-Version:             0.0.20110220
+Version:             0.1
 Synopsis:            Enumerator interface to SamTools library
 License:             MIT
 License-file:        LICENSE
@@ -12,10 +12,5 @@ Cabal-version:       >=1.2
 
 Library
   Exposed-modules:     Bio.SamTools.Enumerator
-  Build-depends:       base == 4.*, bytestring == 0.9.*, haskell98, samtools, transformers, enumerator == 0.4.*
+  Build-depends:       base == 4.*, bytestring == 0.9.*, haskell98, transformers, enumerator == 0.4.*, samtools == 0.1.*
   Hs-Source-Dirs:      src
-
-Executable samenumtest1
-  Build-depends:       base, bytestring, haskell98, samtools, enumerator 
-  Hs-Source-Dirs:      src, test
-  Main-Is:             SamEnumTest1.hs
