--- a/samtools/samtools.cabal
+++ b/samtools/samtools.cabal
@@ -12,6 +12,10 @@ Cabal-version:       >=1.2
 
 Extra-source-files: cbits, include, samtools-0.1.12a
 
+Flag Tests
+  Description: Build test program
+  Default:     False
+
 Library
   Exposed-modules:     Bio.SamTools.Bam, Bio.SamTools.Cigar,
                        Bio.SamTools.BamIndex, Bio.SamTools.FaIdx
@@ -35,3 +39,32 @@ Library
                        samtools-0.1.12a/razf.h, samtools-0.1.12a/sam.h, samtools-0.1.12a/sam_header.h
   CC-options:          -g -O2 -D_FILE_OFFSET_BITS=64 -D_USE_KNETFILE -Wno-unused-result
   Extra-libraries:     z
+  Ghc-options:         -O2 -Wall
+
+Executable samtest
+  if !flag(Tests)
+     Buildable: False
+  Main-is:             SamTest.hs
+  Other-modules:       Bio.SamTools.Bam, Bio.SamTools.Cigar,
+                       Bio.SamTools.BamIndex, Bio.SamTools.FaIdx,
+                       Bio.SamTools.LowLevel, Bio.SamTools.Internal, C2HS
+  Build-depends:       base, bytestring, haskell98, vector >= 0.7, process, filepath
+  Hs-Source-Dirs:      src, test
+  Build-tools:         c2hs
+  Include-dirs:        samtools-0.1.12a, include
+  C-sources:           cbits/samtools.c, 
+                       samtools-0.1.12a/bgzf.c, samtools-0.1.12a/kstring.c, samtools-0.1.12a/bam_aux.c, 
+                       samtools-0.1.12a/bam.c, samtools-0.1.12a/bam_import.c, samtools-0.1.12a/sam.c,
+                       samtools-0.1.12a/bam_index.c, samtools-0.1.12a/bam_pileup.c, samtools-0.1.12a/bam_lpileup.c,
+                       samtools-0.1.12a/bam_md.c, samtools-0.1.12a/glf.c, samtools-0.1.12a/razf.c,
+                       samtools-0.1.12a/faidx.c, samtools-0.1.12a/knetfile.c, samtools-0.1.12a/bam_sort.c,
+                       samtools-0.1.12a/sam_header.c, samtools-0.1.12a/bam_reheader.c, samtools-0.1.12a/kprobaln.c,
+                       samtools-0.1.12a/bam_maqcns.c, samtools-0.1.12a/errmod.c, samtools-0.1.12a/kaln.c
+  Install-includes:    include/samtools.h,
+                       samtools-0.1.12a/bam.h, samtools-0.1.12a/bam_endian.h, samtools-0.1.12a/faidx.h, 
+                       samtools-0.1.12a/glf.h, samtools-0.1.12a/khash.h,
+                       samtools-0.1.12a/kseq.h, samtools-0.1.12a/ksort.h, samtools-0.1.12a/kstring.h,
+                       samtools-0.1.12a/razf.h, samtools-0.1.12a/sam.h, samtools-0.1.12a/sam_header.h
+  CC-options:          -g -O2 -D_FILE_OFFSET_BITS=64 -D_USE_KNETFILE -Wno-unused-result
+  Extra-libraries:     z
+  Ghc-options:         -prof -auto-all -fhpc -O2 -Wall
