--- a/samtools/samtools.cabal
+++ b/samtools/samtools.cabal
@@ -10,7 +10,7 @@ Category:            Bio
 Build-type:          Simple
 Cabal-version:       >=1.2
 
-Extra-source-files: cbits, include, samtools-0.1.12a
+Extra-source-files: cbits, include, samtools-0.1.13
 
 Flag Tests
   Description: Build test program
@@ -23,20 +23,20 @@ Library
   Build-depends:       base, bytestring, haskell98, vector >= 0.7
   Hs-Source-Dirs:      src
   Build-tools:         c2hs
-  Include-dirs:        samtools-0.1.12a, include
+  Include-dirs:        samtools-0.1.13, include
   C-sources:           cbits/samtools.c, 
-                       samtools-0.1.12a/bgzf.c, samtools-0.1.12a/kstring.c, samtools-0.1.12a/bam_aux.c, 
-                       samtools-0.1.12a/bam.c, samtools-0.1.12a/bam_import.c, samtools-0.1.12a/sam.c,
-                       samtools-0.1.12a/bam_index.c, samtools-0.1.12a/bam_pileup.c, samtools-0.1.12a/bam_lpileup.c,
-                       samtools-0.1.12a/bam_md.c, samtools-0.1.12a/glf.c, samtools-0.1.12a/razf.c,
-                       samtools-0.1.12a/faidx.c, samtools-0.1.12a/knetfile.c, samtools-0.1.12a/bam_sort.c,
-                       samtools-0.1.12a/sam_header.c, samtools-0.1.12a/bam_reheader.c, samtools-0.1.12a/kprobaln.c,
-                       samtools-0.1.12a/bam_maqcns.c, samtools-0.1.12a/errmod.c, samtools-0.1.12a/kaln.c
+                       samtools-0.1.13/bgzf.c, samtools-0.1.13/kstring.c, samtools-0.1.13/bam_aux.c, 
+                       samtools-0.1.13/bam.c, samtools-0.1.13/bam_import.c, samtools-0.1.13/sam.c,
+                       samtools-0.1.13/bam_index.c, samtools-0.1.13/bam_pileup.c, samtools-0.1.13/bam_lpileup.c,
+                       samtools-0.1.13/bam_md.c, samtools-0.1.13/glf.c, samtools-0.1.13/razf.c,
+                       samtools-0.1.13/faidx.c, samtools-0.1.13/knetfile.c, samtools-0.1.13/bam_sort.c,
+                       samtools-0.1.13/sam_header.c, samtools-0.1.13/bam_reheader.c, samtools-0.1.13/kprobaln.c,
+                       samtools-0.1.13/bam_maqcns.c, samtools-0.1.13/errmod.c, samtools-0.1.13/kaln.c
   Install-includes:    include/samtools.h,
-                       samtools-0.1.12a/bam.h, samtools-0.1.12a/bam_endian.h, samtools-0.1.12a/faidx.h, 
-                       samtools-0.1.12a/glf.h, samtools-0.1.12a/khash.h,
-                       samtools-0.1.12a/kseq.h, samtools-0.1.12a/ksort.h, samtools-0.1.12a/kstring.h,
-                       samtools-0.1.12a/razf.h, samtools-0.1.12a/sam.h, samtools-0.1.12a/sam_header.h
+                       samtools-0.1.13/bam.h, samtools-0.1.13/bam_endian.h, samtools-0.1.13/faidx.h, 
+                       samtools-0.1.13/glf.h, samtools-0.1.13/khash.h,
+                       samtools-0.1.13/kseq.h, samtools-0.1.13/ksort.h, samtools-0.1.13/kstring.h,
+                       samtools-0.1.13/razf.h, samtools-0.1.13/sam.h, samtools-0.1.13/sam_header.h
   CC-options:          -g -O2 -D_FILE_OFFSET_BITS=64 -D_USE_KNETFILE -Wno-unused-result
   Extra-libraries:     z
   Ghc-options:         -O2 -Wall
@@ -51,20 +51,20 @@ Executable samtest
   Build-depends:       base, bytestring, haskell98, vector >= 0.7, process, filepath
   Hs-Source-Dirs:      src, test
   Build-tools:         c2hs
-  Include-dirs:        samtools-0.1.12a, include
+  Include-dirs:        samtools-0.1.13, include
   C-sources:           cbits/samtools.c, 
-                       samtools-0.1.12a/bgzf.c, samtools-0.1.12a/kstring.c, samtools-0.1.12a/bam_aux.c, 
-                       samtools-0.1.12a/bam.c, samtools-0.1.12a/bam_import.c, samtools-0.1.12a/sam.c,
-                       samtools-0.1.12a/bam_index.c, samtools-0.1.12a/bam_pileup.c, samtools-0.1.12a/bam_lpileup.c,
-                       samtools-0.1.12a/bam_md.c, samtools-0.1.12a/glf.c, samtools-0.1.12a/razf.c,
-                       samtools-0.1.12a/faidx.c, samtools-0.1.12a/knetfile.c, samtools-0.1.12a/bam_sort.c,
-                       samtools-0.1.12a/sam_header.c, samtools-0.1.12a/bam_reheader.c, samtools-0.1.12a/kprobaln.c,
-                       samtools-0.1.12a/bam_maqcns.c, samtools-0.1.12a/errmod.c, samtools-0.1.12a/kaln.c
+                       samtools-0.1.13/bgzf.c, samtools-0.1.13/kstring.c, samtools-0.1.13/bam_aux.c, 
+                       samtools-0.1.13/bam.c, samtools-0.1.13/bam_import.c, samtools-0.1.13/sam.c,
+                       samtools-0.1.13/bam_index.c, samtools-0.1.13/bam_pileup.c, samtools-0.1.13/bam_lpileup.c,
+                       samtools-0.1.13/bam_md.c, samtools-0.1.13/glf.c, samtools-0.1.13/razf.c,
+                       samtools-0.1.13/faidx.c, samtools-0.1.13/knetfile.c, samtools-0.1.13/bam_sort.c,
+                       samtools-0.1.13/sam_header.c, samtools-0.1.13/bam_reheader.c, samtools-0.1.13/kprobaln.c,
+                       samtools-0.1.13/bam_maqcns.c, samtools-0.1.13/errmod.c, samtools-0.1.13/kaln.c
   Install-includes:    include/samtools.h,
-                       samtools-0.1.12a/bam.h, samtools-0.1.12a/bam_endian.h, samtools-0.1.12a/faidx.h, 
-                       samtools-0.1.12a/glf.h, samtools-0.1.12a/khash.h,
-                       samtools-0.1.12a/kseq.h, samtools-0.1.12a/ksort.h, samtools-0.1.12a/kstring.h,
-                       samtools-0.1.12a/razf.h, samtools-0.1.12a/sam.h, samtools-0.1.12a/sam_header.h
+                       samtools-0.1.13/bam.h, samtools-0.1.13/bam_endian.h, samtools-0.1.13/faidx.h, 
+                       samtools-0.1.13/glf.h, samtools-0.1.13/khash.h,
+                       samtools-0.1.13/kseq.h, samtools-0.1.13/ksort.h, samtools-0.1.13/kstring.h,
+                       samtools-0.1.13/razf.h, samtools-0.1.13/sam.h, samtools-0.1.13/sam_header.h
   CC-options:          -g -O2 -D_FILE_OFFSET_BITS=64 -D_USE_KNETFILE -Wno-unused-result
   Extra-libraries:     z
   Ghc-options:         -prof -auto-all -fhpc -O2 -Wall
