Get sequence location information for alignments; doc updates
Ignore-this: 5023c3b58b56a6a854d7f22c354f77b5

darcs-hash:20110303191414-fd04d-cafdd6fd53765a9f367ac8c4094d16518fb867ae

--- a/samtools/samtools.cabal
+++ b/samtools/samtools.cabal
@@ -20,7 +20,7 @@ Library
   Exposed-modules:     Bio.SamTools.Bam, Bio.SamTools.Cigar,
                        Bio.SamTools.BamIndex, Bio.SamTools.FaIdx
   Other-modules:       Bio.SamTools.LowLevel, Bio.SamTools.Internal, C2HS
-  Build-depends:       base, bytestring, haskell98, vector >= 0.7
+  Build-depends:       base, bytestring, haskell98, vector >= 0.7, seqloc
   Hs-Source-Dirs:      src
   Build-tools:         c2hs
   Include-dirs:        samtools-0.1.13, include
@@ -48,7 +48,7 @@ Executable samtest
   Other-modules:       Bio.SamTools.Bam, Bio.SamTools.Cigar,
                        Bio.SamTools.BamIndex, Bio.SamTools.FaIdx,
                        Bio.SamTools.LowLevel, Bio.SamTools.Internal, C2HS
-  Build-depends:       base, bytestring, haskell98, vector >= 0.7, process, filepath
+  Build-depends:       base, bytestring, haskell98, vector >= 0.7, seqloc, process, filepath
   Hs-Source-Dirs:      src, test
   Build-tools:         c2hs
   Include-dirs:        samtools-0.1.13, include
