--- a/samtools-iteratee/samtools-iteratee.cabal
+++ b/samtools-iteratee/samtools-iteratee.cabal
@@ -1,6 +1,7 @@
 Name:                samtools-iteratee
-Version:             0.1
+Version:             0.1.1
 Synopsis:            Iteratee interface to SamTools library
+Description:         Iteratee interface to SamTools library
 License:             MIT
 License-file:        LICENSE
 Author:              Nicholas Ingolia
@@ -8,9 +9,34 @@ Maintainer:          nick@ingolia.org
 Category:            Bio
 
 Build-type:          Simple
-Cabal-version:       >=1.2
+Cabal-version:       >=1.4
+
+Flag Utilities
+  Description: Build utility programs
+  Default:     False
 
 Library
   Exposed-modules:     Bio.SamTools.Iteratee
-  Build-depends:       base == 4.*, bytestring == 0.9.*, haskell98, samtools, transformers, iteratee == 0.8.*
+  Build-depends:       base >= 4.3 && < 5, bytestring >= 0.9 && < 0.10, haskell98, samtools >= 0.1.1, 
+                       transformers, iteratee >= 0.8 && < 0.9
   Hs-Source-Dirs:      src
+
+Executable bam-filter
+  if !flag(Utilities)
+    Buildable: False
+  Main-Is:             BamFilter.hs
+  Other-Modules:       Bio.SamTools.Iteratee
+  Build-depends:       base >= 4.3 && < 5, bytestring >= 0.9 && < 0.10, haskell98, samtools >= 0.1.1, 
+                       transformers, iteratee >= 0.8 && < 0.9, monads-tf
+  Hs-Source-Dirs:      src
+  Ghc-options:         -Wall
+
+Executable bam-count
+  if !flag(Utilities)
+    Buildable: False
+  Main-Is:             BamCount.hs
+  Other-Modules:       Bio.SamTools.Iteratee
+  Build-depends:       base >= 4.3 && < 5, bytestring >= 0.9 && < 0.10, haskell98, samtools >= 0.1.1, 
+                       transformers, iteratee >= 0.8 && < 0.9, monads-tf, vector
+  Hs-Source-Dirs:      src
+  Ghc-options:         -Wall
