--- a/samtools/samtools.cabal
+++ b/samtools/samtools.cabal
@@ -1,5 +1,5 @@
 Name:                samtools
-Version:             0.1.1
+Version:             0.1.2
 Synopsis:            Binding to the C samtools library
 Description:         Binding to the C samtools library, which reads and
                      writes SAM format alignments, both binary and tab-
@@ -10,7 +10,7 @@ License:             MIT
 License-file:        LICENSE
 Author:              Nicholas Ingolia
 Maintainer:          nick@ingolia.org
-Category:            Bio
+Category:            Bioinformatics
 Homepage:            http://www.ingolia-lab.org/software/samtools/
 
 Build-type:          Simple
