--- a/samtools-enumerator/samtools-enumerator.cabal
+++ b/samtools-enumerator/samtools-enumerator.cabal
@@ -13,6 +13,6 @@ Cabal-version:       >=1.4
 
 Library
   Exposed-modules:     Bio.SamTools.Enumerator
-  Build-depends:       base >= 4.2 && < 5, bytestring, transformers, enumerator >= 0.4.7 && < 0.5, samtools >= 0.1.1 && < 0.2
+  Build-depends:       base >= 4.2 && < 5, bytestring, transformers, enumerator >=0.4.7 && <0.5, samtools >= 0.1.1 
   Hs-Source-Dirs:      src
 
