Updated for ghc 7.4 including removing C2HS copied file
Ignore-this: df2bafe909ef4cf17b513d63985ecf

darcs-hash:20120604221429-fd04d-33e684e90f5eb2b6340e28b9c67e2e1dd0be560d

--- a/samtools/samtools.cabal
+++ b/samtools/samtools.cabal
@@ -1,5 +1,5 @@
 Name:                samtools
-Version:             0.2.0.2
+Version:             0.2.1.1
 Synopsis:            Binding to the C samtools library
 Description:         Binding to the C samtools library, which reads and
                      writes SAM format alignments, both binary and tab-
@@ -32,7 +32,7 @@ Flag Tests
 Library
   Exposed-modules:     Bio.SamTools.Bam, Bio.SamTools.Cigar,
                        Bio.SamTools.BamIndex, Bio.SamTools.FaIdx
-  Other-modules:       Bio.SamTools.LowLevel, Bio.SamTools.Internal, C2HS
+  Other-modules:       Bio.SamTools.LowLevel, Bio.SamTools.Internal
   Build-depends:       base >= 4.2 && < 5, bytestring, vector >= 0.7, seqloc >= 0.3.1
   Hs-Source-Dirs:      src
   Build-tools:         c2hs
@@ -62,7 +62,7 @@ Executable samtest
   Main-is:             SamTest.hs
   Other-modules:       Bio.SamTools.Bam, Bio.SamTools.Cigar,
                        Bio.SamTools.BamIndex, Bio.SamTools.FaIdx,
-                       Bio.SamTools.LowLevel, Bio.SamTools.Internal, C2HS
+                       Bio.SamTools.LowLevel, Bio.SamTools.Internal
   Build-depends:       base >= 4.2 && < 5, bytestring, vector >= 0.7, seqloc >= 0.3.1, process, filepath
   Hs-Source-Dirs:      src, test
   Build-tools:         c2hs
