Remove version upper bounds unless we know of a problem

--- a/samtools-iteratee/samtools-iteratee.cabal
+++ b/samtools-iteratee/samtools-iteratee.cabal
@@ -17,8 +17,8 @@ Flag Utilities
 
 Library
   Exposed-modules:     Bio.SamTools.Iteratee
-  Build-depends:       base >= 4.2 && < 5, bytestring >= 0.9 && < 0.10, samtools >= 0.1.1, 
-                       transformers, iteratee >= 0.8 && < 0.9
+  Build-depends:       base >= 4.2, bytestring >= 0.9, samtools >= 0.1.1, 
+                       transformers, iteratee >= 0.8
   Hs-Source-Dirs:      src
 
 Executable bam-filter
@@ -26,7 +26,7 @@ Executable bam-filter
     Buildable: False
   Main-Is:             BamFilter.hs
   Other-Modules:       Bio.SamTools.Iteratee
-  Build-depends:       base >= 4.2 && < 5, bytestring >= 0.9 && < 0.10, samtools >= 0.1.1, 
-                       transformers, iteratee >= 0.8 && < 0.9, monads-tf
+  Build-depends:       base >= 4.2, bytestring >= 0.9, samtools >= 0.1.1, 
+                       transformers, iteratee >= 0.8, monads-tf
   Hs-Source-Dirs:      src
   Ghc-options:         -Wall
